# ColorGeneratorDesktop

./: .gitignore  CMakeLists.txt  README.md
include/: Color.hpp  ImageFormat.hpp  ImageWriter.hpp  Resolution.hpp
include/formats/: STBImageWriter.hpp
src/: Color.cpp  ImageWriter.cpp  Resolution.cpp  main.cpp
src/formats/: STBImageWriter.cpp
